User page redesign

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -150,6 +150,10 @@
     }
 }
 
+.feed-wrapper {
+    margin: 0 -8px;
+}
+
 .feed-wrapper, .members, .quizzes-list, library-list {
     margin-top: 10px;
 }
