--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -276,7 +276,7 @@
                 }
 
                 md-progress-linear {
-                    .custom-progress-bar(@buttonColorBlue, #d9e9f1, 20px, 8px);
+                    .custom-progress-bar(@buttonColorBlue, #d9e9f1, 20px);
                     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.3);
                 }
             }
