--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
@@ -126,7 +126,7 @@
         }
 
         .custom-progress-bar {
-            .custom-progress-bar(@gamificationYellow, @backgroundCalmGrey, 10px, 5px);
+            .custom-progress-bar(@gamificationYellow, @backgroundCalmGrey, 10px);
 
             .md-container .md-bar {
                 border-radius: 5px;
