--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
@@ -28,7 +28,7 @@
         </button>
     </div>
 </div>
-<div layout="row" layout-padding layout-wrap>
+<div class="dashboard-content" layout="row" layout-padding layout-wrap>
     <div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-xs="100" flex-sm="50" class="create-box flex" ng-if="d.createBoxOn">
         @{ Html.RenderPartial("_Create");}
     </div>
