--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Quizzes.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Quizzes.cshtml
@@ -1,7 +1,7 @@
 ﻿@*<script type="text/ng-template" id="user-quiz.html">*@
 <div @*ng-switch-when="q"*@>
-    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="q.loadQuiz()">
-        <div flex-xs="50" flex-xl="15" flex="20" flex-sm="33" flex-md="33" ng-repeat="e in q.quiz" ng-include="'quiz-template.html'"></div>
+    <div class="quizzes" layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="q.loadQuiz()">
+        <div class="quiz" flex-xs="50" flex-xl="20" flex="25" flex-sm="50" flex-md="50" ng-repeat="e in q.quiz" ng-include="'quiz-template.html'"></div>
     </div>
 </div>
 @*</script>*@
