--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
@@ -10,6 +10,10 @@
         padding: 0;
     }
 
+    .dashboard-actions, .dashboard-content {
+        margin: 0 -8px;
+    }
+
     .dashboard-actions .actions-container {
         .displayFlex();
         .align-items(stretch);
