--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
@@ -250,7 +250,7 @@ Page content
     //display: inline-block;
     //float: left;
     //padding: 48px 0 20px 0;
-    padding: 10px;
+    //padding: 10px;
 
     > h1 {
         font-size: 25px;
