--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.rtl.css
@@ -40,6 +40,10 @@
         }
     }*/
 }
+.library .actions,
+.library .library-list {
+  margin: 0 -8px;
+}
 .library .university {
   height: 136px;
 }
