--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.css
@@ -73,7 +73,6 @@
 }
 .userPage .points-container {
   text-align: center;
-  margin: 16px 0;
   background: #ffce2f;
   color: #212325;
 }
@@ -93,49 +92,62 @@
 }
 .userPage .points-info {
   background: #ffffff;
-  padding-bottom: 10px;
 }
 .userPage .points-info h1 {
-  background: #323538;
+  background: #4190b9;
   color: #ffffff;
   font-size: 20px;
   text-align: center;
   padding: 8px 0;
-  margin: 0 0 10px 0;
+  margin: 0;
 }
 .userPage .points-info table {
   width: 100%;
   text-align: center;
+  /*.odd, .even {
+                th, tr:nth-child(1) td {
+                    padding-top: 10px;
+                }
+
+                th, tr:nth-last-child(1) td {
+                    padding-bottom: 10px;
+                }
+            }*/
 }
 .userPage .points-info table th {
   vertical-align: top;
   text-align: left;
-  padding-left: 10px;
+  padding: 0 20px 0 10px;
   font-size: 14px;
   color: #4190b9;
   width: 1%;
+  line-height: 36px;
 }
-.userPage .points-info table tr td:nth-last-child(1) {
-  padding-right: 20px;
-  width: 1%;
-}
-.userPage .points-info table .odd th,
-.userPage .points-info table .even th,
-.userPage .points-info table .odd tr:nth-child(1) td,
-.userPage .points-info table .even tr:nth-child(1) td {
-  padding-top: 10px;
-}
-.userPage .points-info table .odd th,
-.userPage .points-info table .even th,
-.userPage .points-info table .odd tr:nth-last-child(1) td,
-.userPage .points-info table .even tr:nth-last-child(1) td {
-  padding-bottom: 10px;
-}
-.userPage .points-info table tbody.odd {
+.userPage .points-info table tr:nth-child(even) {
   background: #d1e1e9;
 }
-.userPage .points-info table tbody tr {
-  line-height: 22px;
+.userPage .points-info table .titles {
+  line-height: 40px;
+}
+.userPage .points-info table .titles md-icon {
+  fill: #4190b9;
+}
+.userPage .points-info table .titles md-icon.view {
+  width: 30px;
+  height: 20px;
+}
+.userPage .points-info table .titles md-icon.download {
+  width: 17px;
+  height: 22px;
+}
+.userPage .points-info table .titles md-icon.like {
+  width: 23px;
+  height: 22px;
+}
+.userPage .profile-sidebar-portlet,
+.userPage .points-container,
+.userPage .points-info {
+  box-shadow: 0 0px 1px rgba(0, 0, 0, 0.3);
 }
 .userPage .r-table {
   display: table;
@@ -172,22 +184,22 @@
   }
 }
 .userPage .custom-progress-bar {
-  height: 10px;
-  border-radius: 5px;
+  height: 16px;
+  border-radius: 8px;
   overflow: hidden;
 }
 .userPage .custom-progress-bar.md-default-theme .md-container,
 .userPage .custom-progress-bar .md-container {
-  border-radius: 5px;
+  border-radius: 8px;
 }
 .userPage .custom-progress-bar.md-default-theme .md-container,
 .userPage .custom-progress-bar .md-bar,
 .userPage .custom-progress-bar .md-container {
-  height: 10px;
+  height: 16px;
 }
 .userPage .custom-progress-bar .md-container {
-  background: #eeeeee;
-  height: 10px;
+  background: #dadada;
+  height: 16px;
 }
 .userPage .custom-progress-bar .md-container .md-bar {
   background: #ffce2f;
@@ -505,7 +517,7 @@
   -webkit-justify-content: center;
   justify-content: center;
   background-size: cover;
-  background-color: #323538;
+  background-color: #bbcbd3;
   background-position: 50% 50%;
 }
 @media (max-width: 600px) {
@@ -558,148 +570,72 @@
   margin-top: 2%;
   padding: 0 10%;
 }
-@media (min-width: 600px) {
-  .userPage .badges .tab.community .content {
-    padding: 30px;
-  }
+.userPage .badges .tab.community .content {
+  max-width: 840px;
+  padding: 0 20px;
+  margin: 30px auto;
 }
-.userPage .badges .tab.community .content .user,
 .userPage .badges .tab.community .content .filter-wrapper {
-  padding: 15px;
-  display: inline-block;
+  padding-left: 190px;
 }
-@media (max-width: 600px) {
-  .userPage .badges .tab.community .content .user,
-  .userPage .badges .tab.community .content .filter-wrapper {
-    padding: 10px;
-  }
-}
-.userPage .badges .tab.community .content .filters {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-}
-.userPage .badges .tab.community .content .filters .dates,
-.userPage .badges .tab.community .content .filters button {
-  border-radius: 8px;
-  box-shadow: none;
-  max-width: none;
-  padding: 1px 5px;
-}
-.userPage .badges .tab.community .content .filters button,
-.userPage .badges .tab.community .content .filters .dates .md-text {
-  font-size: 18px;
-}
-@media (max-width: 600px) {
-  .userPage .badges .tab.community .content .filters button,
-  .userPage .badges .tab.community .content .filters .dates .md-text {
-    font-size: 14px;
-  }
-}
-.userPage .badges .tab.community .content .filters button {
-  color: #ffffff;
-  line-height: 28px;
-  width: 100%;
-  padding: 1px;
-}
-.userPage .badges .tab.community .content .filters .dates {
-  padding: 0;
-}
-.userPage .badges .tab.community .content .filters .dates .md-text {
-  padding-left: 10px;
-  color: #ffffff;
-}
-.userPage .badges .tab.community .content .filters .dates .md-select-icon {
-  color: #ffffff;
-}
-.userPage .badges .tab.community .content .filters .dates .md-select-value {
-  border: none;
-  padding: 2px;
-}
-.userPage .badges .tab.community .content .users {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -webkit-align-items: flex-start;
-  align-items: flex-start;
-  flex-wrap: wrap;
-}
-.userPage .badges .tab.community .content .users .user .user-data {
-  background: #ffffff;
-  border: 1px solid #5d6d7e;
-  text-align: center;
-  height: 200px;
-  padding: 0 5px 25px 5px;
-  position: relative;
-}
-.userPage .badges .tab.community .content .users .user .user-data img {
-  border-radius: 100%;
-  width: 90px;
-  height: 90px;
-  border: 1px solid #212325;
-  margin: 8px;
-}
-.userPage .badges .tab.community .content .users .user .user-data .name,
-.userPage .badges .tab.community .content .users .user .user-data .points {
+.userPage .badges .tab.community .content .filter-wrapper .action-btn {
   font-size: 20px;
-  line-height: normal;
-  color: #888b8e;
 }
-.userPage .badges .tab.community .content .users .user .user-data .rank {
-  background: #5d6d7e;
+.userPage .badges .tab.community .content .users .user-data {
+  width: 100%;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: stretch;
+  align-items: stretch;
+  color: #536470;
+  padding: 12px 0;
+}
+.userPage .badges .tab.community .content .users .user-data .rank {
+  font-size: 22px;
   font-weight: bold;
-  color: #ffffff;
-  line-height: 32px;
-  font-size: 22px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
 }
-.userPage .badges .tab.community .content .users .user.top-user .user-data {
-  border: 3px solid #ffce2f;
-  position: relative;
-  overflow: hidden;
+.userPage .badges .tab.community .content .users .user-data .rank,
+.userPage .badges .tab.community .content .users .user-data .points {
+  min-width: 92px;
+  text-align: center;
 }
-.userPage .badges .tab.community .content .users .user.top-user .user-data:before {
-  content: '';
-  display: block;
-  width: calc(100% + 50px);
-  height: 100px;
-  background: #ffce2f;
-  position: relative;
-  border-radius: 0 0 100% 100%;
-  top: -40px;
-  left: -25px;
-  margin-bottom: -90px;
+.userPage .badges .tab.community .content .users .user-data .points {
+  font-size: 24px;
+  font-weight: bold;
 }
-.userPage .badges .tab.community .content .users .user.top-user .user-data .name,
-.userPage .badges .tab.community .content .users .user.top-user .user-data .points {
-  font-size: 22px;
-}
-.userPage .badges .tab.community .content .users .user.top-user .user-data .img-wrapper {
-  position: relative;
-  display: inline-block;
-}
-.userPage .badges .tab.community .content .users .user.top-user .user-data .img-wrapper img {
-  position: relative;
-  border: 3px solid #ffffff;
-}
-.userPage .badges .tab.community .content .users .user.top-user .user-data .rank {
-  background: #ffce2f;
-  width: 30px;
-  height: 30px;
-  line-height: 28px;
+.userPage .badges .tab.community .content .users .user-data .img-wrapper {
   border-radius: 100%;
-  padding: 0 2px;
-  font-size: 20px;
-  right: 10px;
-  bottom: 10px;
-  border: 2px solid #888b8e;
+  overflow: hidden;
+  border: solid 1px #536470;
+}
+.userPage .badges .tab.community .content .users .user-data .rank,
+.userPage .badges .tab.community .content .users .user-data .img-wrapper,
+.userPage .badges .tab.community .content .users .user-data .progress-user,
+.userPage .badges .tab.community .content .users .user-data .points {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.userPage .badges .tab.community .content .users .user-data .progress-user {
+  position: relative;
+  flex-grow: 1;
+  flex-shrink: 0;
+  margin: 0 26px;
+}
+.userPage .badges .tab.community .content .users .user-data .progress-user .name,
+.userPage .badges .tab.community .content .users .user-data .progress-user .badges {
   position: absolute;
-  left: inherit;
+  bottom: 0;
+}
+.userPage .badges .tab.community .content .users .user-data .progress-user .name {
+  left: 8px;
+}
+.userPage .badges .tab.community .content .users .user-data .progress-user .badges {
+  right: 8px;
 }
 .userPage .badges md-ink-bar {
   background: #4190b9;
@@ -826,14 +762,15 @@
 .userPage .profile-content .portlet.light {
   margin: 0 12px;
   background: #f5f5f5;
-  max-width: 1000px;
+  max-width: 1040px;
   min-height: 500px;
 }
 .userPage .profile-content .user-box {
   min-width: 300px;
 }
 @media (min-width: 600px) {
-  .userPage .profile-content .files .file {
+  .userPage .profile-content .files .file,
+  .userPage .profile-content .quizzes .quiz {
     padding: 20px;
   }
 }
