--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
@@ -23,18 +23,18 @@
             <ul>
                 @foreach (var level in Model.Levels)
                 {
-                <li class="level">
-                    <div class="title">
-                        <div class="image"></div>
-                        <div class="name">@level.Name</div>
-                    </div>
-                    <div class="body">
-                        @level.Description
-                        @{ string progress = "g.levels.l" + level.Index + ".progress"; }
-                        <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{@progress}}"></md-progress-linear>
-                    </div>
-                </li>
-                }
+                    <li class="level">
+                        <div class="title">
+                            <div class="image"></div>
+                            <div class="name">@level.Name</div>
+                        </div>
+                        <div class="body">
+                            @level.Description
+                            @{ string progress = "g.levels.l" + level.Index + ".progress"; }
+                            <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{@progress}}"></md-progress-linear>
+                        </div>
+                    </li>
+                                }
 
             </ul>
         </div>
@@ -80,33 +80,24 @@
                 <img class="title" src="@Url.CdnContent("~/Images/Site/Leaderboard-title.png")" />
             </div>
             <div class="content">
-                <div class="filters" layout="row" layout-padding layout-wrap>
-                    @*<div class="filter-wrapper" flex-lg="20" flex-md="25" flex-gt-lg="20" flex-xs="50" flex-sm="25">
-                        <md-input-container class="dates action-btn">
-                            <md-select ng-model="g.communityFilter">
-                                <md-option value="This Month">This Month</md-option>
-                                <md-option value="Filter 1">Filter 1</md-option>
-                                <md-option value="Filter 2">Filter 2</md-option>
-                                <md-option value="Filter 3">Filter 3</md-option>
-                            </md-select>
-                        </md-input-container>
-                    </div>*@
-                    <div class="filter-wrapper" flex-lg="20" flex-md="25" flex-gt-lg="20" flex-xs="50" flex-sm="25">
-                        <button type="button" ng-click="g.goToSelf()" class="action-btn">Show Myself</button>
-                    </div>
+                <div class="filter-wrapper">
+                    <button type="button" ng-click="g.goToSelf()" class="action-btn">Show Myself</button>
                 </div>
                 <div class="users" layout="row" layout-padding layout-wrap>
-                    <a ng-attr-id="{{'user_' + user.id}}" ui-sref="user({userId:user.id,userName:user.name})" class="user" flex-lg="20" flex-md="25" flex-gt-lg="20" flex-xs="50" flex-sm="25" ng-repeat="user in ::g.leaderboard track by user.id" ng-class="{'top-user' : $index < 5}">
-                        <div class="user-data">
-                            <div class="img-wrapper">
-                                <user-image class="img-responsive" name="user.name" image="user.image" width="125" height="125"></user-image>
-                                @*<img alt="logo" ng-src="{{::user.image}}" />*@
-                                <div class="rank" ng-bind="::$index+1"></div>
-                            </div>
+
+                    <div class="user-data" ng-repeat="user in ::g.leaderboard track by user.id" ng-class="{'top-user' : $index < 5}">
+                        <div class="rank" ng-bind="::$index+1"></div>
+                        <a class="img-wrapper" ng-attr-id="{{'user_' + user.id}}" ui-sref="user({userId:user.id,userName:user.name})">
+                            <user-image class="img-responsive" name="user.name" image="user.image" width="68" height="68"></user-image>
+                        </a>
+                        <div class="progress-user">
+                            <md-progress-linear class="custom-progress-bar" ng-cloak md-mode="determinate" value="{{gb.score}}"></md-progress-linear>
                             <div class="name ellipsis" ng-bind="::user.name"></div>
-                            <div class="points" ng-bind="::user.score"></div>
+                            <div class="badges">@GamificationResources.Badges</div>
                         </div>
-                    </a>
+                        <div class="points" ng-bind="::user.score"></div>
+                    </div>
+
                 </div>
             </div>
         </div>
