User page  + leaderboard changes

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
@@ -175,11 +175,9 @@
         </ol>
     </div>
     <div class="boxes-side-area flex" layout-padding flex="100" flex-md="33" flex-lg="30" flex-gt-lg="30">
-        <div layout-wrap layout-padding layout="row" layout-align="space-between stretch" ng-controller="RecommendedController as r" ng-hide="r.isPrivate">
-            <div flex="100" flex-sm="50" ng-if="b.showLeaderboard" class="flex leaderboard-container" ng-controller="LeaderboardController as lb">
+            <div flex="100" flex-sm="50" ng-if="b.showLeaderboard" class="flex community" ng-controller="LeaderboardController as lb">
                 @* ReSharper disable once Mvc.PartialViewNotResolved *@
-                @{ Html.RenderPartial("_LeaderBoard", IndexResources.Best);}
-            </div>
+                @{ Html.RenderPartial("_LeaderBoard");}
             @*<div class="suggested flex" flex="100" flex-gt-md="100" flex-sm="50" ng-repeat="e in ::r.boxes track by e.boxId" ng-include="'box-template.html'"></div>*@
         </div>
     </div>
