Leaderboard in box. done

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
@@ -2,7 +2,7 @@
 <div class="top">
     <div class="bg-l"></div>
     <div class="bg-r"></div>
-    <img class="title" src="@Url.CdnContent("~/Images/Site/Leaderboard-title.png")" />
+    <img alt="leaderboard title" class="title" src="@Url.CdnContent("~/Images/Site/Leaderboard-title.png")" />
 </div>
 <div class="content">
     <div class="filter-wrapper">
